[tool.poetry]
name = "corr-ctrl"
version = "0.1.0"
description = "Scripts for controlling digital correlator"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
dateparser = "^1.1"
fire = "^0.4"

[tool.poetry.dev-dependencies]
black = "^22.3"
ipython = "^8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
